--- a/fgfw-lite/ui/localrules.ui
+++ b/fgfw-lite/ui/localrules.ui
@@ -13,9 +13,30 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="6,0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="6,0,0">
    <item>
-    <layout class="QVBoxLayout" name="LocalRulesLayout"/>
+    <layout class="QVBoxLayout" name="LocalRulesLayout">
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QPushButton" name="RefreshButton">
+     <property name="text">
+      <string>刷新</string>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
