--- a/fgfw-lite/ui/localrules.ui
+++ b/fgfw-lite/ui/localrules.ui
@@ -32,6 +32,9 @@
        <item>
         <widget class="QWidget" name="widget" native="true">
          <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="margin">
+           <number>0</number>
+          </property>
           <item>
            <layout class="QVBoxLayout" name="LocalRulesLayout"/>
           </item>
