--- a/fgfw-lite/ui/settings.ui
+++ b/fgfw-lite/ui/settings.ui
@@ -98,9 +98,6 @@
         <string>Shadowsocks</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
-        <property name="bottomMargin">
-         <number>0</number>
-        </property>
         <item>
          <layout class="QFormLayout" name="formLayout_4">
           <property name="fieldGrowthPolicy">
@@ -157,7 +154,7 @@
           <item row="0" column="0">
            <widget class="QLabel" name="label_7">
             <property name="text">
-             <string>服务器名称</string>
+             <string>　　　名称</string>
             </property>
            </widget>
           </item>
@@ -200,6 +197,24 @@
         </item>
        </layout>
       </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QPushButton" name="editConfButton">
+         <property name="text">
+          <string>编辑 userconf.ini</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="editLocalButton">
+         <property name="text">
+          <string>编辑 local.txt</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
