--- a/fgfw-lite/ui/settings.ui
+++ b/fgfw-lite/ui/settings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>573</width>
-    <height>380</height>
+    <height>411</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,6 +34,27 @@
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <property name="leftMargin">
+        <number>12</number>
+       </property>
+       <item>
+        <widget class="QCheckBox" name="gfwlistToggle">
+         <property name="text">
+          <string>gfwlist</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="updateToggle">
+         <property name="text">
+          <string>自动更新</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
      <item>
       <widget class="QGroupBox" name="goagentBox">
        <property name="title">
