--- a/fgfw-lite/ui/localrule.ui
+++ b/fgfw-lite/ui/localrule.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="topMargin">
     <number>0</number>
@@ -29,15 +32,21 @@
    </item>
    <item>
     <widget class="QPushButton" name="copyButton">
+     <property name="locale">
+      <locale language="English" country="UnitedStates"/>
+     </property>
      <property name="text">
-      <string>复制</string>
+      <string>Copy</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="delButton">
+     <property name="locale">
+      <locale language="English" country="UnitedStates"/>
+     </property>
      <property name="text">
-      <string>删除</string>
+      <string>Delete</string>
      </property>
     </widget>
    </item>
