--- a/fgfw-lite/ui/remoteresolver.ui
+++ b/fgfw-lite/ui/remoteresolver.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>FW-Lite Remote Resolver</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
@@ -61,7 +64,7 @@
     <item>
      <widget class="QPushButton" name="goButton">
       <property name="text">
-       <string>Go</string>
+       <string>Resolve</string>
       </property>
      </widget>
     </item>
